--- a/frontend_twitter/src/maincomponents/Sidebar.css
+++ b/frontend_twitter/src/maincomponents/Sidebar.css
@@ -1,3 +1,9 @@
+.sidebar {
+    flex: 0.3;
+}
+
 .mainicon {
     color: whitesmoke !important;
+    font-size: 40px !important;
+    padding-left: 10px;
 }
