--- a/frontend_twitter/src/components/SidebarOptions.css
+++ b/frontend_twitter/src/components/SidebarOptions.css
@@ -1,3 +1,32 @@
 .sidebaroptions {
     color: whitesmoke !important;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-bottom: 10px;
+    width: fit-content;
+    /* padding: 10px; */
+    padding: 2px 10px;
+    border-radius: 20px;
+}
+
+
+
+.sidebaroptions_icon {
+    font-size: 35px !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.sidebaroptions_text {
+    margin-left: 10px;
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.sidebaroptions:hover {
+    background-color: rgba(255, 255, 255, 0.345) !important;
+    /* transition: color 100ms ease-out; */
+    -webkit-transition: background-color 300ms ease-out;
+    -ms-transition: background-color 300ms ease-out;
+    transition: background-color 300ms ease-out;
 }
