--- a/frontend_twitter/src/components/Post.css
+++ b/frontend_twitter/src/components/Post.css
@@ -3,6 +3,7 @@
     align-items: flex-start;
     border-bottom: 1px solid rgba(255, 255, 255, 0.345);
     padding-bottom: 10px;
+    color: white
 }
 
 .post__body {
@@ -34,7 +35,7 @@
 
 .post_badge {
     font-size: 14px !important;
-    color: whitesmoke;
+    color: blue !important;
 }
 
 .post_headderSpecial {
