--- a/frontend_twitter/src/components/SidebarOptions.css
+++ b/frontend_twitter/src/components/SidebarOptions.css
@@ -5,12 +5,9 @@
     cursor: pointer;
     margin-bottom: 10px;
     width: fit-content;
-    /* padding: 10px; */
     padding: 2px 10px;
     border-radius: 20px;
 }
-
-
 
 .sidebaroptions_icon {
     font-size: 35px !important;
@@ -25,8 +22,9 @@
 
 .sidebaroptions:hover {
     background-color: rgba(255, 255, 255, 0.345) !important;
-    /* transition: color 100ms ease-out; */
-    -webkit-transition: background-color 300ms ease-out;
-    -ms-transition: background-color 300ms ease-out;
     transition: background-color 300ms ease-out;
 }
+
+/* .sidebaroptions--active {
+    color: aqua !important;
+} */
